# ArtistSync

./: .gitignore  LICENSE  README.md  implementation_plan.md  pyproject.toml  requirements.txt
src/artist_sync/: __init__.py  __main__.py  auth.py  cache.py  cli.py  config.py  models.py  playlist_manager.py  spotify_client.py  sync_engine.py
tests/: conftest.py  test_playlist_manager.py  test_sync_engine.py
tmp/: settings.json
